# BlockChain

./: CMakeLists.txt  README.md  SHA256.cpp  SHA256.h  arbolavl.cpp  avl.h  blockchain.h  criterios_busqueda.h  funcionamiento_structs.h  funciones.h  hashfromcsv.cpp  lectura.h  main.cpp  node.h  nodeAVL.h  pedir_datos.h  prueba.cpp  test2.csv
structs/: chainhash.h
structs/CircularArray/: circular_array.h
structs/avl/: avl.h  date.h  forward_list.h  main.cpp  nodeavl.h
structs/blockchain/: Block.h  SHA256.h  blockchain.h
structs/boyer_moree/: boyer_moree.cpp  boyer_moree.h
structs/btree/: btree.h  main,cpp  main.cpp  node.h
structs/circular_array/: circular_array.h
structs/hash/: hashfromcsv.cpp
structs/patriciaTrie/: patricia_trie.h
structs/tabla_hash/: chainhash.h  forward_list.h
tests/: test2.csv
